style: fix single-session spacing

--- a/src/layouts/_single-session.scss
+++ b/src/layouts/_single-session.scss
@@ -2,18 +2,13 @@
 
 .single-wcb_session {
 
-  .wp-block-post-title + .wp-block-post-featured-image {
-    margin-top: 80px;
-    margin-bottom: -300px;
-  }
-
   .wp-block-wordcamp-session-date + .wp-block-wordcamp-session-speakers {
     text-align: center;
     @include font-headings();
   }
 
   .wp-block-post-content {
-    padding-top: 80px;
+    padding-top: 0;
   }
 
   .session-categories-links {
